--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -257,7 +257,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -755,7 +754,6 @@ allow 209.141.41.25;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -825,7 +823,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -833,11 +830,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.3;
-allow 23.191.200.4;
-allow 23.191.200.5;
-allow 23.191.200.6;
+allow 23.191.200.28;
+allow 23.191.200.31;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1016,7 +1010,6 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
-allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
@@ -1078,7 +1071,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1106,7 +1098,6 @@ allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1293,8 +1284,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
-allow 2a0e:97c0:3e3:460:1337:b03b:1337:4;
-allow 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 allow 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -1303,6 +1292,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1364,7 +1354,6 @@ allow 2a12:a800:2:1:45:138:16:42;
 allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
-allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
@@ -1418,7 +1407,6 @@ allow 37.228.129.189;
 allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
-allow 37.48.70.156;
 allow 37.77.56.238;
 allow 38.135.24.30;
 allow 38.135.24.31;
@@ -1439,8 +1427,6 @@ allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
-allow 45.13.225.69;
-allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.70.158;
@@ -1458,7 +1444,6 @@ allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.141.215.110;
-allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.167;
 allow 45.141.215.169;
@@ -1552,10 +1537,10 @@ allow 46.165.243.36;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.246.92.34;
 allow 46.250.243.29;
 allow 46.253.4.208;
 allow 46.38.243.210;
-allow 46.8.43.110;
 allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
@@ -1568,7 +1553,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1711,6 +1695,7 @@ allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.88.75.35;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
@@ -1734,7 +1719,6 @@ allow 94.72.104.135;
 allow 94.74.164.89;
 allow 95.128.43.164;
 allow 95.143.193.125;
-allow 95.211.174.137;
 allow 95.211.244.28;
 allow 98.128.173.33;
 allow 98.71.178.101;
