--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -278,7 +278,6 @@ deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
-deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
@@ -340,7 +339,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -368,7 +366,6 @@ deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -555,8 +552,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 deny 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 deny 2a0e:97c0:3e3:460:1337:b02b:1337:3;
-deny 2a0e:97c0:3e3:460:1337:b03b:1337:4;
-deny 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 deny 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 deny 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -565,6 +560,7 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
+deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -626,7 +622,6 @@ deny 2a12:a800:2:1:45:138:16:42;
 deny 2a12:a800:2:1:45:138:16:69;
 deny 2a12:a800:2:1:45:138:16:76;
 deny 2a12:a800:2:1:45:141:215:110;
-deny 2a12:a800:2:1:45:141:215:111;
 deny 2a12:a800:2:1:45:141:215:114;
 deny 2a12:a800:2:1:45:141:215:167;
 deny 2a12:a800:2:1:45:141:215:169;
